# generative-art

./: .gitignore  Cargo.toml  LICENSE
src/mondrian/: .#main.rs  main.rs
