[package]
name = "generative-art"
version = "0.1.0"
authors = ["Naren Dasan <naren@narendasan.com>"]
edition = "2018"
license = "NCSA"
    
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14"

[[bin]]
name = "mondrian"
path = "src/mondrian/main.rs"